@@ -1,5 +1,6 @@
 2025-03-02 Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* Minor code improvements and code cleanup
+	* Properly close file descriptors of included config files
 
 2025-03-01 Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* Add support for file system type restricted rules (Linux only)
